feat: migrate to junit5