@@ -1,24 +1,16 @@
 package com.codewars.anter69;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import org.junit.jupiter.api.Test;
 
-import org.junit.Test;
-
-public class MyLanguagesTest {
+class MyLanguagesTest {
   @Test
-  public void basicTests() {
-    var map1 = Map.of("Java", 10, "Ruby", 80, "Python", 65);
-    assertEquals(Arrays.asList("Ruby", "Python"), MyLanguages.myLanguages(map1));
-
-    var map2 = Map.of("Hindi", 60, "Dutch", 93, "Greek", 71);
-    assertEquals(Arrays.asList("Dutch", "Greek", "Hindi"), MyLanguages.myLanguages(map2));
-
-    var map3 = Map.of("C++", 50, "ASM", 10, "Haskell", 20);
-    assertEquals(Collections.emptyList(), MyLanguages.myLanguages(map3));
+  void sample() {
+    assertEquals(List.of("Ruby", "Python"), MyLanguages.myLanguages(Map.of("Java", 10, "Ruby", 80, "Python", 65)));
+    assertEquals(List.of("Dutch", "Greek", "Hindi"), MyLanguages.myLanguages(Map.of("Hindi", 60, "Dutch", 93, "Greek", 71)));
+    assertEquals(List.of(), MyLanguages.myLanguages(Map.of("C++", 50, "ASM", 10, "Haskell", 20)));
   }
 }
